--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Kufam&display=swap");
 html {
   box-sizing: border-box;
   margin: 0;
@@ -10,6 +11,43 @@ html {
   box-sizing: inherit;
   margin: inherit;
   padding: inherit;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Kufam", sans-serif;
+  font-weight: 700;
+}
+
+h1 {
+  font-size: 42pt;
+}
+
+h2 {
+  font-size: 36pt;
+}
+
+h3 {
+  font-size: 32pt;
+}
+
+h4 {
+  font-size: 28pt;
+}
+
+h5 {
+  font-size: 26pt;
+}
+
+h6 {
+  font-size: 20pt;
+}
+
+p, em, b, a {
+  font-size: 18pt;
 }
 
 /*# sourceMappingURL=main.css.map */
