--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -1,4 +1,54 @@
 @import url("https://fonts.googleapis.com/css2?family=Kufam&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600&display=swap");
+.main-nav-container {
+  display: flex;
+  flex-direction: column;
+}
+.main-nav-container .main-nav__navlist {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  list-style: none;
+}
+.main-nav-container .main-nav__navlist .main-nav__navitem {
+  margin-left: 0.5rem;
+}
+
+.featured {
+  margin-top: 5em;
+}
+.featured__tagline--bigbold {
+  margin: 0.65em;
+}
+.featured__taglines {
+  margin: 0.75em;
+}
+.featured__taglines .featured__tagline-1 {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.features-section {
+  margin-top: 6rem;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .main-nav-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .main-nav-container__imgcontainer {
+    width: 50%;
+  }
+  .main-nav-container .main-nav__navlist {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 html {
   box-sizing: border-box;
   margin: 0;
@@ -11,6 +61,7 @@ html {
   box-sizing: inherit;
   margin: inherit;
   padding: inherit;
+  max-width: 100%;
 }
 
 html {
@@ -18,7 +69,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Kufam", sans-serif;
+  font-family: "Kufam", "sans-serif";
   font-weight: 700;
 }
 
@@ -46,8 +97,30 @@ h6 {
   font-size: 20pt;
 }
 
-p, em, b, a {
+p, em, b, a, span {
   font-size: 18pt;
+  font-family: "Cairo", "sans-serif";
+}
+
+.main-nav__navlink {
+  font-size: 14pt;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.featured__tagline--bigbold {
+  font-weight: bold;
+  font-size: 20pt;
+}
+
+.featured__tagline--bigbold span {
+  font-size: 22pt;
+}
+
+@media (min-width: 768px) {
+  .main-nav__navlink {
+    font-size: 18pt;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
