--- a/marketing-page/assets/sass/libs/_vars.scss
+++ b/marketing-page/assets/sass/libs/_vars.scss
@@ -1,2 +1,7 @@
+// Fonts
 $font-family-1: 'Kufam', 'sans-serif';
 $font-family-2: 'Cairo', 'sans-serif';
+
+// Colors
+
+$background-color-neutral-1: #F2F2F2;
