--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -10,7 +10,7 @@
     list-style: none;
 
     .main-nav__navitem {
-      margin-left: 0.5rem;
+      margin-right: 1.5rem;
     }
   }
 }
@@ -34,8 +34,11 @@
 
 .features-section {
   margin-top: 6rem;
+  padding: 1.5rem 0;
   text-align: center;
-
+  article {
+    padding: 0;
+  }
 }
 
 @media (min-width: 768px) {
@@ -52,6 +55,46 @@
     .main-nav__navlist {
       display: flex;
       justify-content: space-between;
+    }
+  }
+
+  .featured {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+
+    &__taglines {
+      max-width: 46em;
+      margin-left: 1.5rem;
+    }
+  }
+
+  .features-section {
+    display: flex;
+    flex-direction: column;
+
+    &__item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0;
+      border: 1px solid black;
+
+      &:nth-child(3) {
+        flex-direction: row-reverse;
+
+        .features-section__copy p {
+          margin-left: 0;
+        }
+      }
+    }
+
+    &__img-container {
+      max-width: 100%;
+    }
+
+    &__copy {
+      max-width: 46em;
     }
   }
 }
