--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -67,6 +67,11 @@
       max-width: 46em;
       margin-left: 1.5rem;
     }
+
+    &__buttons {
+      width: 75%;
+      margin: auto;
+    }
   }
 
   .features-section {
