--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -62,6 +62,10 @@
     max-width: 46em;
     margin-left: 1.5rem;
   }
+  .featured__buttons {
+    width: 75%;
+    margin: auto;
+  }
 
   .features-section {
     display: flex;
@@ -93,8 +97,13 @@ html {
   padding: 0;
 }
 
-* + * {
-  margin: 20px;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+  margin: inherit;
+  padding: inherit;
+  max-width: 100%;
 }
 
 html {
