Layout: continuing to work on layout

--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -3,6 +3,10 @@
 .main-nav-container {
   display: flex;
   flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 .main-nav-container .main-nav__navlist {
   display: flex;
@@ -17,9 +21,6 @@
 
 .featured {
   margin-top: 5em;
-}
-.featured__tagline--bigbold {
-  margin: 0.65em;
 }
 .featured__taglines {
   margin: 0.75em;
@@ -57,14 +58,31 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    align-content: center;
   }
   .featured__taglines {
     max-width: 46em;
-    margin-left: 1.5rem;
+    margin-left: 5rem;
   }
-  .featured__buttons {
-    width: 75%;
-    margin: auto;
+  .featured__buttons .button {
+    margin: 1.5rem;
+  }
+
+  .additional {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  .additional__copy-container {
+    max-width: 46em;
+  }
+  .additional__tagline-1 {
+    margin-top: 3rem;
+  }
+  .additional__tagline-2 {
+    margin-top: 1.5rem;
   }
 
   .features-section {
@@ -76,7 +94,6 @@
     align-items: center;
     justify-content: center;
     padding: 0;
-    border: 1px solid black;
   }
   .features-section__item:nth-child(3) {
     flex-direction: row-reverse;
@@ -152,11 +169,24 @@ p, em, b, a, span {
 
 .featured__tagline--bigbold {
   font-weight: bold;
-  font-size: 20pt;
+  font-size: 35pt;
 }
 
 .featured__tagline--bigbold span {
-  font-size: 22pt;
+  font-size: 30pt;
+}
+
+.featured .button {
+  font-size: 20pt;
+  font-weight: 600;
+}
+
+.additional__tagline-1 {
+  font-size: 30pt;
+}
+
+.additional__tagline-2 {
+  font-size: 30pt;
 }
 
 .features-section__copy p {
@@ -167,6 +197,17 @@ p, em, b, a, span {
   .main-nav__navlink {
     font-size: 18pt;
   }
+}
+.button {
+  padding: 1.75rem;
+  border-radius: 15px;
+  border: none;
+  background-color: #FFD102;
+  cursor: pointer;
+}
+.button:hover {
+  background: #000;
+  color: #FFFFFF;
 }
 
 /*# sourceMappingURL=main.css.map */
