--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -1,6 +1,10 @@
 .main-nav-container {
   display: flex;
   flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 
   .main-nav__navlist {
     display: flex;
@@ -17,10 +21,6 @@
 
 .featured {
   margin-top: 5em;
-
- &__tagline--bigbold {
-  margin: 0.65em;
- }
 
  &__taglines {
   margin: 0.75em;
@@ -62,15 +62,35 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    align-content: center;
 
     &__taglines {
       max-width: 46em;
-      margin-left: 1.5rem;
+      margin-left: 5rem;
     }
 
     &__buttons {
-      width: 75%;
-      margin: auto;
+      .button {
+        margin: 1.5rem;
+      }
+    }
+  }
+  .additional {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    &__copy-container {
+      max-width: 46em;
+    }
+
+    &__tagline-1 {
+      margin-top: 3rem;
+    }
+
+    &__tagline-2 {
+      margin-top: 1.5rem;
     }
   }
 
@@ -83,7 +103,6 @@
       align-items: center;
       justify-content: center;
       padding: 0;
-      border: 1px solid black;
 
       &:nth-child(3) {
         flex-direction: row-reverse;
