added an extra tagline to addtional__taglines

--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -71,6 +71,7 @@
   .additional {
     display: flex;
     justify-content: center;
+    align-items: baseline;
     margin-top: 5rem;
     margin-left: 2rem;
     margin-right: 2rem;
