--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -75,9 +75,11 @@
       }
     }
   }
+  
   .additional {
     display: flex;
     justify-content: center;
+    align-items: baseline;
     margin-top: 5rem;
     margin-left: 2rem;
     margin-right: 2rem;
