--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -1,9 +1,6 @@
 .main-nav-container {
   display: flex;
   flex-direction: column;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
 
   .main-nav__navlist {
@@ -20,7 +17,16 @@
 }
 
 .featured {
-  margin-top: 5em;
+    display: flex;
+    flex-direction: column;
+    // align-items: flex-end;
+    // justify-content: center;
+    // align-content: center;
+
+  &__imgcontainer {
+    width: 100%;
+    height: auto;
+  }
 
  &__taglines {
   margin: 0.75em;
@@ -60,9 +66,11 @@
 
   .featured {
     display: flex;
-    align-items: flex-end;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
     align-content: center;
+    margin: 0.75em;
 
     &__taglines {
       max-width: 46em;
@@ -78,6 +86,7 @@
   
   .additional {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: baseline;
     margin-top: 5rem;
