--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -23,6 +23,7 @@
 .featured__imgcontainer {
   width: 100%;
   height: auto;
+  margin: 0.75rem;
 }
 .featured__taglines {
   margin: 0.75em;
@@ -64,12 +65,19 @@
     align-content: center;
     margin: 0.75em;
   }
+  .featured__imgcontainer {
+    width: 30%;
+    height: auto;
+  }
   .featured__taglines {
-    max-width: 46em;
-    margin-left: 5rem;
+    max-width: 30%;
+  }
+  .featured__buttons {
+    margin-top: 4rem;
   }
   .featured__buttons .button {
-    margin: 1.5rem;
+    margin: 0 0 3rem 0;
+    width: 100%;
   }
 
   .additional {
@@ -82,13 +90,7 @@
     margin-right: 2rem;
   }
   .additional__copy-container {
-    max-width: 46em;
-  }
-  .additional__tagline-1 {
-    margin-top: 3rem;
-  }
-  .additional__tagline-2 {
-    margin-top: 1.5rem;
+    max-width: 30%;
   }
 
   .features-section {
@@ -214,6 +216,20 @@ p, em, b, a, span {
 .button:hover {
   background: #000;
   color: #FFFFFF;
+}
+
+@media (min-width: 768px) {
+  .additional p {
+    margin: 0;
+    padding: 3rem;
+  }
+  .additional__copy-container {
+    border-radius: 15px;
+    box-shadow: 1px 1px 1em #000;
+    text-align: left;
+    padding: 4rem;
+    min-height: 250px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
