--- a/marketing-page/assets/sass/components/_button.scss
+++ b/marketing-page/assets/sass/components/_button.scss
@@ -3,10 +3,12 @@
   border-radius: 15px;
   border: none;
   background-color: #FFD102;
+  box-shadow: 1px 1px 1em #000;
   cursor: pointer;
 
   &:hover {
-    background: #000;
+    background-color: #000;
     color: #FFFFFF;
+    transition: background-color 0.2s ease-in;
   }
 }
