--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -19,20 +19,33 @@
 .featured {
     display: flex;
     flex-direction: column;
+    
 
   &__imgcontainer {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     margin: 0.75rem;
   }
 
  &__taglines {
   margin: 0.75em;
+  max-width: 100%;
+ }
+ &__buttons {
+   max-width: 100%;
+   margin-left: 5em;
+ }
+}
 
-  .featured__tagline-1 {
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
-  }
+// Additional Taglines
+.additional {
+ width: 100%;
+ display: flex;
+ flex-direction: column;
+ 
+ &__copy-container {
+  margin: 1.5rem;
+  padding: 1.5rem;
  }
 }
 
@@ -64,26 +77,29 @@
 
   .featured {
     display: flex;
+    // flex-direction: column;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    align-content: center;
+    // align-content: center;
     margin: 0.75em;
 
     &__imgcontainer {
-      width: 30%;
+      float: left;
+      max-width: 30%;
       height: auto;
     }
     &__taglines {
-      max-width: 30%;
+      max-width: 50%;
     }
 
     &__buttons {
-      margin-top: 4rem;
+     margin: 3rem 0 3rem 0;
 
       .button {
-        margin: 0 0 3rem 0;
-        width: 100%;
+        margin: 0 auto;
+        width: 50%;
+        align-self: center;
       }
     }
   }
@@ -91,6 +107,7 @@
   .additional {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: baseline;
     margin-top: 5rem;
