--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -32,8 +32,17 @@
   max-width: 100%;
  }
  &__buttons {
-   max-width: 100%;
-   margin-left: 5em;
+   display: block;
+   max-width: 80%;
+   margin-left: auto;
+   
+   @media (min-width: 375px) {
+     max-width: 75%;
+   }
+
+   @media (min-width: 500px) and (min-width: 680px) {
+     max-width: 65%;
+   }
  }
 }
 
@@ -42,7 +51,7 @@
  width: 100%;
  display: flex;
  flex-direction: column;
- 
+
  &__copy-container {
   margin: 1.5rem;
   padding: 1.5rem;
@@ -95,12 +104,6 @@
 
     &__buttons {
      margin: 3rem 0 3rem 0;
-
-      .button {
-        margin: 0 auto;
-        width: 50%;
-        align-self: center;
-      }
     }
   }
   
