--- a/marketing-page/assets/sass/typography/_typography.scss
+++ b/marketing-page/assets/sass/typography/_typography.scss
@@ -52,9 +52,10 @@ p, em, b, a, span {
   font-weight: bold;
   font-size: 25pt;
   text-align: center;
+
   @media (min-width: 768px) {
     text-align: left;
-    font-size: 30pt;
+    font-size: 40pt;
   }
 }
 
@@ -66,6 +67,7 @@ p, em, b, a, span {
 .additional__tagline {
   font-size: 18pt;
   text-align: center;
+  font-weight: 400;
   @media (min-width: 768px) {
       text-align: left;
       font-size: 30pt;
@@ -73,7 +75,10 @@ p, em, b, a, span {
 }
 
 .features-section__copy p {
-  font-size: 30pt;
+  font-size: 18pt;
+  @media (min-width: 768px) {
+    font-size: 30pt;
+  }
 }
 
 
