Improvements: removed max height propert from additional css

--- a/marketing-page/assets/sass/main.scss
+++ b/marketing-page/assets/sass/main.scss
@@ -1,6 +1,14 @@
 @import './libs/vars';
+
+// Layout
 @import './layout/layout';
+
+// Base
 @import './base/base';
+
+// Typography
 @import'./typography/typography';
+
+// Components
 @import './components/button';
 @import './components/additional';
