--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -270,5 +270,42 @@ p, em, b, a, span {
     max-width: 46em;
   }
 }
+.modal-beta {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 40%;
+  background: #FFD201;
+  border: 1px solid #000;
+  border-radius: 15px;
+  padding: 3.75rem;
+  z-index: 999;
+}
+.modal-beta__form {
+  padding: 2rem;
+  margin: 2rem;
+  border-radius: 15px;
+}
+.modal-beta__form .form-group {
+  padding: 1.5rem;
+}
+.modal-beta__form input[type=submit] {
+  padding: 0.75rem;
+  display: block;
+  margin: auto;
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
 
 /*# sourceMappingURL=main.css.map */
