Added a modal with toggle-able state

--- a/marketing-page/assets/sass/typography/_typography.scss
+++ b/marketing-page/assets/sass/typography/_typography.scss
@@ -34,7 +34,7 @@ h6 {
   font-size: 20pt;
 }
 
-p, em, b, a, span {
+p, em, label, input, b, a, span {
   font-size: 18pt;
   font-family: $font-family-2
 }
