--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -183,7 +183,7 @@ h6 {
   font-size: 20pt;
 }
 
-p, em, b, a, span {
+p, em, label, input, b, a, span {
   font-size: 18pt;
   font-family: "Cairo", "sans-serif";
 }
@@ -271,32 +271,41 @@ p, em, b, a, span {
   }
 }
 .modal-beta {
-  display: none;
+  display: grid;
   position: absolute;
-  top: 50%;
-  left: 40%;
+  top: 30%;
+  left: 35%;
+  right: 25%;
   background: #FFD201;
   border: 1px solid #000;
   border-radius: 15px;
-  padding: 3.75rem;
+  padding: 3.5rem;
   z-index: 999;
+  grid-template-columns: 1fr 1fr;
 }
-.modal-beta__form {
-  padding: 2rem;
-  margin: 2rem;
+.modal-beta__title {
+  background-color: #FFF;
+  align-self: center;
   border-radius: 15px;
 }
-.modal-beta__form .form-group {
-  padding: 1.5rem;
+.modal-beta__form {
+  border-radius: 15px;
+}
+.modal-beta__form label {
+  margin: 0;
+  padding: 0;
+}
+.modal-beta__form input {
+  padding: 0.75rem;
 }
 .modal-beta__form input[type=submit] {
   padding: 0.75rem;
   display: block;
   margin: auto;
+  cursor: pointer;
 }
 
 .overlay {
-  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -306,6 +315,10 @@ p, em, b, a, span {
   right: 0;
   background: rgba(0, 0, 0, 0.4);
   z-index: 1;
+}
+
+.none {
+  display: none;
 }
 
 /*# sourceMappingURL=main.css.map */
