--- a/marketing-page/assets/sass/components/_modalbeta.scss
+++ b/marketing-page/assets/sass/components/_modalbeta.scss
@@ -1,32 +1,46 @@
 .modal-beta {
-  display: none;
+  display: grid;
   position: absolute;
-  top: 50%;
-  left: 40%;
+  top: 30%;
+  left: 35%;
+  right: 25%;
   background: #FFD201;
   border: 1px solid #000;
   border-radius: 15px;
-  padding: 3.75rem;
+  padding: 3.50rem;
   z-index: 999;
+  grid-template-columns: 1fr 1fr;
+  
+
+ &__title {
+   background-color: #FFF;
+   align-self: center;
+   border-radius: 15px;
+ }
 
   &__form {
-    padding: 2rem;
-    margin: 2rem;
     border-radius: 15px;
 
-    .form-group {
-      padding: 1.5rem;
+    label {
+      margin: 0;
+      padding: 0;
     }
+
+    input {
+      padding: 0.75rem;
+    }
+
     input[type=submit] {
       padding: 0.75rem;
       display: block;
       margin: auto;
+      cursor: pointer;
+
     }
   }
 }
 
 .overlay {
-  display: none;
   position:fixed;
   width: 100%;
   height: 100%;
@@ -36,4 +50,8 @@
   right: 0;
   background: rgba(0,0,0,0.4);
   z-index: 1;
+}
+
+.none {
+  display: none;
 }
