--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 .main-nav-container .main-nav__navlist {
   display: flex;
@@ -12,13 +15,15 @@
   align-content: center;
   list-style: none;
 }
-.main-nav-container .main-nav__navlist .main-nav__navitem {
-  margin-right: 1.5rem;
+.main-nav-container .main-nav__navlist .main-nav__navitem:nth-child(2) {
+  margin-right: 1.25em;
+  margin-left: 1.25em;
 }
 
 .featured {
   display: flex;
   flex-direction: column;
+  margin-top: 15rem;
 }
 .featured__imgcontainer {
   max-width: 100%;
@@ -49,6 +54,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin: 5rem 2rem 10rem;
 }
 .additional__copy-container {
   margin: 1.5rem;
@@ -74,9 +80,14 @@
   .main-nav-container__imgcontainer {
     width: 50%;
   }
+  .main-nav-container .main-nav {
+    padding: 0.75em;
+  }
   .main-nav-container .main-nav__navlist {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
   }
 
   .featured {
@@ -84,12 +95,12 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 0.75em;
+    margin: 20rem 0 20rem 0;
   }
   .featured__imgcontainer {
-    float: left;
-    max-width: 30%;
+    max-width: 65%;
     height: auto;
+    padding-left: 0;
   }
   .featured__taglines {
     max-width: 50%;
@@ -104,9 +115,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-    margin-top: 5rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin: 5rem 2rem 10rem;
   }
   .additional__copy-container {
     max-width: 30%;
@@ -189,13 +198,13 @@ p, em, label, input, b, a, span {
 }
 
 .main-nav__navlink {
-  font-size: 18pt;
+  font-size: 14pt;
   text-decoration: none;
   font-weight: 700;
 }
 @media (min-width: 768px) {
   .main-nav__navlink {
-    font-size: 20pt;
+    font-size: 18pt;
   }
 }
 
@@ -319,6 +328,23 @@ p, em, label, input, b, a, span {
 
 .none {
   display: none;
+}
+
+.main-nav-container {
+  background-color: #FFF3C4;
+}
+.main-nav-container .main-nav {
+  background-color: #F7C948;
+  border-radius: 15px;
+}
+.main-nav-container .main-nav__navitem {
+  background-color: #FADB5F;
+  border-radius: 15px;
+}
+.main-nav-container .main-nav__navitem .main-nav__navlink {
+  color: #222222;
+  padding: 0.75em;
+  margin: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
