--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
 
   .main-nav__navlist {
     display: flex;
@@ -10,8 +13,9 @@
     align-content: center;
     list-style: none;
 
-    .main-nav__navitem {
-      margin-right: 1.5rem;
+    .main-nav__navitem:nth-child(2) {
+      margin-right: 1.25em;
+      margin-left: 1.25em;
     }
   }
 }
@@ -19,7 +23,7 @@
 .featured {
     display: flex;
     flex-direction: column;
-    
+    margin-top: 15rem;
 
   &__imgcontainer {
     max-width: 100%;
@@ -51,7 +55,7 @@
  width: 100%;
  display: flex;
  flex-direction: column;
-
+ margin: 5rem 2rem 10rem;
  &__copy-container {
   margin: 1.5rem;
   padding: 1.5rem;
@@ -77,27 +81,32 @@
     &__imgcontainer {
       width: 50%;
     }
-    
+
+    .main-nav {
+      padding: 0.75em;
+    }
+
     .main-nav__navlist {
       display: flex;
-      justify-content: space-between;
+      flex-direction: row;
+      justify-content: center;
+      align-content: center;
     }
   }
 
   .featured {
     display: flex;
-    // flex-direction: column;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    // align-content: center;
-    margin: 0.75em;
+    margin: 20rem 0 20rem 0;
 
     &__imgcontainer {
-      float: left;
-      max-width: 30%;
+      max-width: 65%;
       height: auto;
+      padding-left: 0;
     }
+
     &__taglines {
       max-width: 50%;
     }
@@ -113,10 +122,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-    margin-top: 5rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-
+    margin: 5rem 2rem 10rem;
     &__copy-container {
       max-width: 30%;
     }
