--- a/marketing-page/assets/sass/libs/_vars.scss
+++ b/marketing-page/assets/sass/libs/_vars.scss
@@ -4,4 +4,14 @@ $font-family-2: 'Cairo', 'sans-serif';
 
 // Colors
 
+// Neutrals
+$neutral-1: #222222;
+$neutral-2: #3B3B3B;
+$neutral-3: #E1E1E1;
+
+// Backgrounds
 $background-color-neutral-1: #F2F2F2;
+$background-color-yellow-1: #FFF3C4;
+$background-color-yellow-2: #FCE588;
+$background-color-yellow-3: #FADB5F;
+$background-color-yellow-4: #F7C948;
