--- a/marketing-page/assets/sass/libs/_vars.scss
+++ b/marketing-page/assets/sass/libs/_vars.scss
@@ -8,6 +8,7 @@ $font-family-2: 'Cairo', 'sans-serif';
 $neutral-1: #222222;
 $neutral-2: #3B3B3B;
 $neutral-3: #E1E1E1;
+$neutral-4: #FFFFFF;
 
 // Backgrounds
 $background-color-neutral-1: #F2F2F2;
