--- a/marketing-page/assets/sass/main.scss
+++ b/marketing-page/assets/sass/main.scss
@@ -14,3 +14,4 @@
 @import './components/additional';
 @import './components/modalbeta';
 @import './components/navbar';
+@import './components/featured';
