--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -2,12 +2,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
-  .main-nav {
-    margin: 2em 0 ;
-  }
+
   .main-nav__navlist {
     display: flex;
     align-items: center;
@@ -25,7 +23,7 @@
 .featured {
     display: flex;
     flex-direction: column;
-    margin-top: 25rem;
+    // margin-top: 15rem;
 
   &__imgcontainer {
     max-width: 100%;
@@ -57,7 +55,7 @@
  width: 100%;
  display: flex;
  flex-direction: column;
- margin: 5rem 2rem 2rem 2rem;
+
  &__copy-container {
   margin: 1.5rem;
   padding: 1.5rem;
@@ -101,7 +99,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 20rem 0 20rem 0;
+    position: relative;
+    // margin: 15rem 0 20rem 0;
 
     &__imgcontainer {
       max-width: 65%;
@@ -124,7 +123,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-    margin: 5rem 2rem 10rem;
+    width: 100%;
     &__copy-container {
       max-width: 30%;
     }
