--- a/marketing-page/assets/sass/base/_base.scss
+++ b/marketing-page/assets/sass/base/_base.scss
@@ -1,8 +1,8 @@
-html {
+html, body {
   box-sizing: border-box;
-  background-color: $background-color-yellow-2;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 *,
