--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -5,6 +5,7 @@
   position: sticky;
   top: 0;
   left: 0;
+  z-index: 999;
 
   .main-nav__navlist {
     display: flex;
@@ -23,8 +24,6 @@
 .featured {
     display: flex;
     flex-direction: column;
-    // margin-top: 15rem;
-
   &__imgcontainer {
     max-width: 100%;
     height: auto;
@@ -63,11 +62,18 @@
 }
 
 .features-section {
-  margin-top: 6rem;
-  padding: 1.5rem 0;
   text-align: center;
-  article {
+  margin-top: 5rem;
+  &__item {
+    margin-top: 0.75rem;
+  }
+
+  &:nth-child(3) {
     padding: 0;
+  }
+
+  article p {
+    padding: 1.5em;
   }
 }
 
@@ -100,7 +106,7 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    // margin: 15rem 0 20rem 0;
+    height: 750px;
 
     &__imgcontainer {
       max-width: 65%;
@@ -132,16 +138,21 @@
   .features-section {
     display: flex;
     flex-direction: column;
+    max-width: 75%;
+    margin: auto;
 
     &__item {
       display: flex;
       align-items: center;
       justify-content: center;
+      align-content: center;
       padding: 0;
+      margin-top: 1.5rem;
 
       &:nth-child(3) {
         flex-direction: row-reverse;
-
+        position: relative;
+        left: 10%;
         .features-section__copy p {
           margin-left: 0;
         }
@@ -150,6 +161,8 @@
 
     &__img-container {
       max-width: 100%;
+      height: auto;
+      margin: 0;
     }
 
     &__copy {
