--- a/marketing-page/assets/sass/main.scss
+++ b/marketing-page/assets/sass/main.scss
@@ -15,3 +15,4 @@
 @import './components/modalbeta';
 @import './components/navbar';
 @import './components/featured';
+@import './components/features';
