--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 999;
@@ -126,10 +126,23 @@
   .additional {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-content: center;
     align-items: baseline;
     width: 100%;
+    margin: 0 0 2.5rem 0;
+    padding: 10% 0 10% 0;
+
+    &__title {
+      align-self: center;
+      padding: 0;
+      margin: 0;
+    }
+    &__flexparent {
+      display: flex;
+      flex-direction: row;
+    }
     &__copy-container {
       max-width: 30%;
     }
@@ -138,7 +151,7 @@
   .features-section {
     display: flex;
     flex-direction: column;
-    max-width: 75%;
+    max-width: 100%;
     margin: auto;
 
     &__item {
