--- a/marketing-page/assets/sass/main.scss
+++ b/marketing-page/assets/sass/main.scss
@@ -16,3 +16,4 @@
 @import './components/navbar';
 @import './components/featured';
 @import './components/features';
+@import './components/footer';
