--- a/marketing-page/assets/sass/typography/_typography.scss
+++ b/marketing-page/assets/sass/typography/_typography.scss
@@ -51,6 +51,20 @@ p, em, label, input, b, a, span {
   }
 }
 
+.footer__navlink {
+  font-size: 14pt;
+  text-decoration: none;
+  font-weight: 600;
+  @media (min-width: 768px) {
+    font-size: 16pt;
+  }
+}
+.footer__copy {
+  font-size: 8pt;
+  @media (min-width: 768px) {
+    font-size: 10pt;
+  }
+}
 .featured__tagline--bigbold {
   font-weight: bold;
   font-size: 25pt;
