--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -24,29 +24,31 @@
 .featured {
     display: flex;
     flex-direction: column;
-  &__imgcontainer {
-    max-width: 100%;
-    height: auto;
-    margin: 0.75rem;
-  }
+    margin: 10rem 0 0 0;
+    &__imgcontainer {
+      max-width: 100%;
+      height: auto;
+      margin: 0.75rem;
+    }
 
- &__taglines {
-  margin: 0.75em;
-  max-width: 100%;
- }
- &__buttons {
-   display: block;
-   max-width: 80%;
-   margin-left: auto;
+    &__taglines {
+      margin: 0.75em;
+      max-width: 100%;
+    }
+ 
+    &__buttons {
+      display: block;
+      max-width: 80%;
+      margin-left: auto;
    
-   @media (min-width: 375px) {
+    @media (min-width: 375px) {
      max-width: 75%;
-   }
+    }
 
-   @media (min-width: 500px) and (min-width: 680px) {
+    @media (min-width: 500px) and (min-width: 680px) {
      max-width: 65%;
-   }
- }
+    }
+  }
 }
 
 // Additional Taglines
@@ -64,6 +66,7 @@
 .features-section {
   text-align: center;
   margin-top: 5rem;
+
   &__item {
     padding: 1.5rem;
   }
@@ -82,13 +85,14 @@
   padding: 5%;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: space-between;
 
   .footer__navlist {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     list-style: none;
-    margin: 0;
+    margin: 0 0 1.5rem 0;
     padding: 0;
   }
   .footer__copy {
@@ -97,6 +101,7 @@
     padding: 0;
   }
 }
+
 @media (min-width: 768px) {
   .main-nav-container {
     display: flex;
@@ -127,6 +132,7 @@
     justify-content: center;
     position: relative;
     height: 750px;
+    margin: 0;
 
     &__imgcontainer {
       max-width: 65%;
@@ -200,6 +206,32 @@
 
     &__copy {
       max-width: 46em;
+    }
+  }
+
+  .footer__container {
+    background-color: $background-color-yellow-2;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+  
+    .footer__navlist {
+      display: flex;
+      flex-direction: row;
+      list-style: none;
+      margin: 0 0 1.5rem 0;
+      padding: 0;
+      .footer__navitem {
+        margin-left: 0.75rem;
+      }
+    }
+
+    .footer__copy {
+      max-width: 46em;
+      margin: 0;
+      padding: 0;
     }
   }
 }
