--- a/marketing-page/assets/sass/typography/_typography.scss
+++ b/marketing-page/assets/sass/typography/_typography.scss
@@ -34,7 +34,7 @@ h6 {
   font-size: 20pt;
 }
 
-p, em, label, input, b, a, span {
+ em, label, input, b, span {
   font-size: 18pt;
   font-family: $font-family-2;
   @media (min-width: 375px) {
@@ -52,19 +52,21 @@ p, em, label, input, b, a, span {
 }
 
 .footer__navlink {
-  font-size: 14pt;
+  font-size: 12pt;
   text-decoration: none;
   font-weight: 600;
   @media (min-width: 768px) {
     font-size: 16pt;
   }
 }
+
 .footer__copy {
   font-size: 8pt;
   @media (min-width: 768px) {
-    font-size: 10pt;
+    font-size: 14pt;
   }
 }
+
 .featured__tagline--bigbold {
   font-weight: bold;
   font-size: 25pt;
