--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -146,7 +146,7 @@
     align-items: baseline;
     width: 100%;
     margin: 0 0 2.5rem 0;
-    padding: 10% 0 10% 0;
+    padding: 5% 0 10% 0;
   }
   .additional__title {
     align-self: center;
@@ -198,7 +198,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
   }
   .footer__container .footer__navlist {
     display: flex;
@@ -486,16 +486,16 @@ em, label, input, b, span {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 10vw;
+    height: 20vw;
   }
 }
 
-.additional__svg {
+.additional__svg:after polygon {
   width: 100%;
-  height: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0;
-  top: 0;
+  height: 10vw;
+  z-index: 999;
 }
 
 /*# sourceMappingURL=main.css.map */
