--- a/marketing-page/assets/sass/components/_svg.scss
+++ b/marketing-page/assets/sass/components/_svg.scss
@@ -5,14 +5,14 @@ svg {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 10vw;
+    height: 20vw;
   }
 }
 
-.additional__svg {
+.additional__svg:after polygon {
   width: 100%;
-  height: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0;
-  top: 0;
+  height: 10vw;
+  z-index: 999;
 }
