--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -158,7 +158,7 @@
     align-items: baseline;
     width: 100%;
     margin: 0 0 2.5rem 0;
-    padding: 10% 0 10% 0;
+    padding: 5% 0 10% 0;
 
     &__title {
       align-self: center;
@@ -215,7 +215,7 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
   
     .footer__navlist {
       display: flex;
