--- a/marketing-page/assets/sass/libs/_vars.scss
+++ b/marketing-page/assets/sass/libs/_vars.scss
@@ -9,6 +9,16 @@ $neutral-1: #222222;
 $neutral-2: #3B3B3B;
 $neutral-3: #E1E1E1;
 $neutral-4: #FFFFFF;
+// hsl(209, 61%, 16%)
+// hsl(209, 23%, 60%)
+// hsl(211, 39%, 23%)
+// hsl(211, 27%, 70%)
+// hsl(209, 34%, 30%)
+// hsl(210, 31%, 80%)
+// hsl(209, 28%, 39%)
+// hsl(212, 33%, 89%)
+// hsl(210, 22%, 49%)
+// hsl(210, 36%, 96%)
 
 // Backgrounds
 $background-color-neutral-1: #F2F2F2;
@@ -16,3 +26,7 @@ $background-color-yellow-1: #FFF3C4;
 $background-color-yellow-2: #FCE588;
 $background-color-yellow-3: #FADB5F;
 $background-color-yellow-4: #F7C948;
+$accent-color-yellow-1: #A27C1A;
+$accent-color-yellow-2: #C99A2E;
+$accent-color-yellow-3: #E9B949;
+$accent-color-yellow-4: #F7D070;
