Moved ui elements into a class, cta on header is now clickable again

--- a/marketing-page/assets/sass/libs/_vars.scss
+++ b/marketing-page/assets/sass/libs/_vars.scss
@@ -20,7 +20,7 @@ $neutral-4: #FFFFFF;
 // hsl(210, 22%, 49%)
 // hsl(210, 36%, 96%)
 
-// Backgrounds
+// General Colors
 $background-color-neutral-1: #F2F2F2;
 $background-color-yellow-1: #FFF3C4;
 $background-color-yellow-2: #FCE588;
